--- a/index.html
+++ b/index.html
@@ -7,17 +7,26 @@
 </head>
 <body>
     <h1>Vishaal Arun</h1>
+    <img src="./Assets/IMG20240215204037.jpg" alt="Vishaal" height="200">
+    <br><br>
+    <a href="https://leetcode.com/vishaal351/">Leetcode</a>
+    <a href="https://www.linkedin.com/in/vishaal-arun-b0a9291a0/">LinkedIn</a>
+    <a href="https://github.com/Vishaal3006">GitHub</a>
+    <hr>
     <h2>Summary:</h2>
      <p>Passionate software developer with a proven track record of delivering high-quality solutions in fast-paced environments. With 2 years of experience in the industry, I specialize in designing and implementing efficient software systems that meet client requirements and exceed expectations</p>
-    <h2>Education:</h2>
+     <hr>
+     <h2>Education:</h2>
     <h3>Loyola Institute of technology</h3>
     <p>Bachelors of Engineering in Computer Science- 2018-2022</p>
     <h3>M.S.P School</h3>
     <p>Higher Secondary Education - 2016-2018</p>
+    <hr>
     <h2>Work Experience:</h2>
     <h3>AstraZeneca</h3>
     <h4>Associate Engineer:2022-Present</h4>
     <p>A skilled SnapLogic developer with 2 years of experience proficiently designs, develops, and optimizes data integration pipelines. Capable of transforming diverse data sources into actionable insights, adept at workflow orchestration, and troubleshooting, ensuring smooth data flow. Collaborative and communicative, engaging with stakeholders to meet business requirements effectively. Committed to continuous learning, staying updated with SnapLogic's advancements and industry trends, while delivering scalable, efficient solutions.</p>
+    <hr>
     <h2>Skills:</h2>
     <ul>
         <li>SnapLogic</li>
@@ -27,12 +36,13 @@
         <li>MySQL</li>
         <li>Git</li>
     </ul>
+    <hr>
     <h2>Awards and Certifications</h2>
     <h3>Data Structures and Algorithms:</h3>
     <p><a href="https://drive.google.com/file/d/14bvx49kBfY9xyuBSMCztMv-2rz26vXCN/view">Link to DSA Certification</a></p>
     <h3>Programming in Java:</h3>
     <p><a href="https://drive.google.com/file/d/15AWCwc6uAHofgbIm3z4gI9y1axcSzCRI/view">Link to Java certification</a></p>
-    
+    <hr>
 </body>
 <footer>
     <p><a href="./contact.html">Hobbies</a> <a href="./about.html">About Me</a></p>
